<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/no_ktp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_ktp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_no_ktp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/nama"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_nama"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/no_telepon"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_nomor_telepon"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/dari"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_asal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_lokasi_awal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/tujuan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_tujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_lokasi_tujuan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/harga"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_harga"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/jumlah_pesan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_jumlahpesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_jumlah_pesan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/uang_bayar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_nominal_pembayaran"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <Button
                android:id="@+id/btn_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/bg_button"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </TableLayout>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/total_harga"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/tv_uangkembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/uang_kembalian"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/tv_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/keterangan"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp">

            <Button
                android:id="@+id/btn_hapus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/bg_button"
                android:text="@string/hapus"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_keluar"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/bg_button"
                android:text="@string/keluar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </TableLayout>
    </TableLayout>
</ScrollView>